app/assets/stylesheets/components/_navbar.scss
// _navbar.scss

.navbar-top {
  top:0;
  left:0;
  background: #fff;
  padding: 10px 30px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
  position: fixed;
  width: 100vw;
  height: 10vh;
  z-index: 999;

  i{
    font-size: 1.5em;
    color: $flexi;
    opacity:.8;
    min-width: 4vh
  }

  img { // LOGO
    height: 7vh;
  }
}

.log-out-icon {
}

.profile-icon {
  min-width: 8vw
}

